#
# Copyright (c) 2013 Nicholas Corgan (n.corgan@gmail.com)
#
# Distributed under the MIT License (MIT) (See accompanying file LICENSE.txt
# or copy at http://opensource.org/licenses/MIT)
#

FILE(TO_NATIVE_PATH "${CMAKE_SOURCE_DIR}/swig" PKMNSIM_SWIG_SOURCE_DIR)
SET(PKMNSIM_SWIG_SOURCE_DIR ${PKMNSIM_SWIG_SOURCE_DIR} CACHE FILEPATH "PKMNsim SWIG source directory")

# Set Python install directory
execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "
from distutils import sysconfig
print sysconfig.get_python_lib(plat_specific=True, prefix='')
" OUTPUT_VARIABLE PKMNSIM_PYTHON_DIR OUTPUT_STRIP_TRAILING_WHITESPACE
)
file(TO_CMAKE_PATH ${PKMNSIM_PYTHON_DIR} PKMNSIM_PYTHON_DIR)
SET(PKMNSIM_PYTHON_DIR ${PKMNSIM_PYTHON_DIR} CACHE FILEPATH "Python install directory")

INCLUDE(${SWIG_USE_FILE})

SET(PKMNSIM_PYTHON_INCLUDE_DIRS
    ${CMAKE_SOURCE_DIR}
    ${PKMNSIM_SWIG_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${SQLITE3_INCLUDE_DIR}
    ${PYTHON_INCLUDE_DIRS}
)
INCLUDE_DIRECTORIES(${PKMNSIM_PYTHON_INCLUDE_DIRS})

SET(CMAKE_SWIG_FLAGS -module pypkmnsim)
FOREACH(dir ${PKMNSIM_PYTHON_INCLUDE_DIRS})
    LIST(APPEND CMAKE_SWIG_FLAGS "-I${dir}")
ENDFOREACH(dir ${PKMNSIM_PYTHON_INCLUDE_DIRS})

SET(PKMNSIM_PYTHON_LIBRARIES
    pkmnsim
    ${PYTHON_LIBRARIES}
)

SET_SOURCE_FILES_PROPERTIES(pypkmnsim.i PROPERTIES CPLUSPLUS ON)

INCLUDE(UseSWIG)
SWIG_ADD_MODULE(pypkmnsim python pypkmnsim.i)
SWIG_LINK_LIBRARIES(pypkmnsim ${PKMNSIM_PYTHON_LIBRARIES})

#Set install instructions
INSTALL(
    FILES ${CMAKE_CURRENT_BINARY_DIR}/pypkmnsim.py
    DESTINATION ${PKMNSIM_PYTHON_DIR}
    COMPONENT "pypkmnsim"
)
INSTALL(
    TARGETS ${SWIG_MODULE_pypkmnsim_REAL_NAME}
    DESTINATION ${PKMNSIM_PYTHON_DIR}
    COMPONENT "pypkmnsim"
)